syntax = "proto3";

package grpc.goods;

service goodsService {
    rpc getGoods (GetGoodsRequest) returns (GetGoodsResponse) {
    }
}

message GetGoodsRequest {
    int32 id = 1;
}

message GetGoodsResponse {
    string goods_name = 1;
    int32 goods_price = 2;
    int32 id = 3;
}